forms spacing and passing year bug fixed

--- a/src/components/Forms/StudentDetailForms/FormFour/FormFour.module.scss
+++ b/src/components/Forms/StudentDetailForms/FormFour/FormFour.module.scss
@@ -18,9 +18,6 @@
   }
 
   .btn_container {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
     padding-top: 40px;
     width: 100%;
   }
